Add build and watch to scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "TOP website",
   "main": "index.js",
   "scripts": {
-    "test": "what"
+    "test": "what",
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
