--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/doozles411/Restaurant.git"
+    "url": "git+https://github.com/cynthem/Restaurant.git"
   },
   "keywords": [
     "restaurant"
@@ -18,9 +18,9 @@
   "author": "cmp",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/doozles411/Restaurant/issues"
+    "url": "https://github.com/cynthem/Restaurant/issues"
   },
-  "homepage": "https://github.com/doozles411/Restaurant#readme",
+  "homepage": "https://github.com/cynthem/Restaurant#readme",
   "devDependencies": {
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
